--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
+
     //Fuel
     implementation 'com.github.kittinunf.fuel:fuel:2.2.0' //core
     implementation 'com.github.kittinunf.fuel:fuel-android:2.2.0' //android support
