Update the manifest with the WikiApplication as application class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.zakariyaf.wikibrowser">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+            android:name=".WikiApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
