--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     //Anko
     implementation "org.jetbrains.anko:anko-commons:0.10.8" //commons
     implementation "org.jetbrains.anko:anko-sqlite:0.10.8" //SQLite
+
+    //RxJava & RxAndroid
+    implementation "io.reactivex.rxjava2:rxjava:2.2.7"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 }
