--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.zakariyaf.wikibrowser">
-    <uses-permission android:name="android.permission.INTERNET"/>
+        package="com.zakariyaf.wikibrowser">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:name=".WikiApplication"
             android:allowBackup="true"
@@ -10,19 +12,20 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.SearchActivity">
-        </activity>
-        <activity android:name=".activities.ArticleDetailActivity">
-        </activity>
         <activity
-                android:name=".activities.MainActivity"
-                android:label="@string/app_name">
+                android:name=".activities.SplashActivity"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.SearchActivity"></activity>
+        <activity android:name=".activities.ArticleDetailActivity"></activity>
+        <activity
+                android:name=".activities.MainActivity"
+                android:label="@string/app_name" />
     </application>
 
 </manifest>
